--- a/style.css
+++ b/style.css
@@ -1,30 +1,36 @@
-:root{
+:root {
 
     --cor-principal: #6E859F;
     --cor-segundaria: #284260;
     --cor-destaque: #C92BFC;
 
 }
-body{
+
+body {
 
     font-family: 'Chakra Petch', sans-serif;
     color: var(--cor-principal);
     margin: 2rem;
 
 }
-h1, h2, h3{
+
+h1,
+h2,
+h3 {
 
     color: var(--cor-segundaria);
     font-weight: 700;
 
 }
-a{
+
+a {
 
     color: var(--cor-destaque);
     text-decoration: none;
 
 }
-a:hover{
+
+a:hover {
 
     color: var(--cor-principal);
 
